fix: fix list group color in dark mode

--- a/global-styles/variables.dark.scss
+++ b/global-styles/variables.dark.scss
@@ -125,6 +125,8 @@ $close-text-shadow: none;
 // Code
 $pre-color: $dark;
 
+$list-group-color: $dark;
+
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/variables";
